[package]
name = "fuser-ng"
version = "0.7.2"
authors = ["William R. Fraser <wfraser@codewise.org>", "François NT <francois@iobuffer.me>"]
repository = "https://github.com/francois-nt/fuser-ng"
description = "A higher-level FUSE filesystem library with inode->path translation."
categories = ["filesystem", "os::unix-apis"]
keywords = ["fuse", "fuser", "filesystem", "mount", "userspace"]
license = "MIT OR Apache-2.0"
readme = "DOC.md"
edition = "2024"
rust-version = "1.85"
include = [
    "Cargo.toml",
    "DOC.md",
    "RELEASENOTES.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "src/**",
]

[dependencies]
fuser = "0.17"
libc = "0.2"
log = "0.4"
parking_lot = "0.12.5"

[workspace]
members = [".", "example"]

